// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        aria-label="radioBoxesField"
        aria-orientation="vertical"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radioboxesfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_coffee"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="coffee"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Coffee
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Perfect for lazy Sundays and binge-watching.
              </div>
            </div>
          </label>
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_tea"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="tea"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Tea
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Calm, zen, and definitely not boring.
              </div>
            </div>
          </label>
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_sparkling"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="sparkling"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Sparkling Water
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Because sometimes you need bubbles in your life.
              </div>
            </div>
          </label>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > DisabledCompletely 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        aria-label="radioBoxesField"
        aria-orientation="vertical"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radioboxesfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus pointer-events-none opacity-disabled"
            data-disabled="true"
            data-testid="radioboxesfield_option_morning"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                disabled=""
                name="radioBoxesField"
                type="radio"
                value="morning"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Morning Person
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Early birds get worms, but also need alarms.
              </div>
            </div>
          </label>
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus pointer-events-none opacity-disabled"
            data-disabled="true"
            data-testid="radioboxesfield_option_night"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                disabled=""
                name="radioBoxesField"
                type="radio"
                value="night"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Night Owl
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Peak productivity at 2 AM.
              </div>
            </div>
          </label>
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus pointer-events-none opacity-disabled"
            data-disabled="true"
            data-testid="radioboxesfield_option_insomniac"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                disabled=""
                name="radioBoxesField"
                type="radio"
                value="insomniac"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Insomniac
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Sleep? What sleep?
              </div>
            </div>
          </label>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > DisabledOption 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        aria-label="radioBoxesField"
        aria-orientation="vertical"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radioboxesfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_tabs"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="tabs"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Browser Tabs
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Reliable, safe, and a bit boring.
              </div>
            </div>
          </label>
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus pointer-events-none opacity-disabled"
            data-disabled="true"
            data-testid="radioboxesfield_option_books"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                disabled=""
                name="radioBoxesField"
                type="radio"
                value="books"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Physical Books
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Currently out of stock (sold out!)
              </div>
            </div>
          </label>
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_sticky"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="sticky"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Sticky Notes
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Your desk is now a post-it jungle.
              </div>
            </div>
          </label>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Inline 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        aria-label="radioBoxesField"
        aria-orientation="horizontal"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radioboxesfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="horizontal"
          role="presentation"
        >
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_small"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="small"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Small
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Small but mighty, like a chihuahua.
              </div>
            </div>
          </label>
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_medium"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="medium"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Medium
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                The Goldilocks of sizes - just right.
              </div>
            </div>
          </label>
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_large"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="large"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Large
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Go big or go home!
              </div>
            </div>
          </label>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Invalid 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        aria-describedby="react-aria-«replaced-aria-id»"
        aria-invalid="true"
        aria-label="Choose Your Pizza"
        aria-orientation="vertical"
        aria-required="true"
        class="relative flex flex-col group gap-0"
        data-invalid="true"
        data-required="true"
        data-testid="radioboxesfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <span
          class="relative after:content-['*'] after:text-danger after:ml-0.5 mb-2 inline-flex text-sm text-foreground subpixel-antialiased group-data-[invalid=true]:text-danger"
        >
          <legend>
            Choose Your Pizza
          </legend>
        </span>
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <label
            aria-required="true"
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus !border-danger"
            data-invalid="true"
            data-testid="radioboxesfield_option_margherita"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                required=""
                tabindex="-1"
                title=""
                type="radio"
                value="margherita"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background w-5 h-5 border-danger group-data-[selected=true]:border-danger group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 w-2 h-2 bg-danger text-danger-foreground transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-danger transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Margherita
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Simple, classic, and universally loved.
              </div>
            </div>
          </label>
          <label
            aria-required="true"
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus !border-danger"
            data-focus="true"
            data-hover="true"
            data-invalid="true"
            data-selected="true"
            data-testid="radioboxesfield_option_pineapple"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                required=""
                tabindex="0"
                title=""
                type="radio"
                value="pineapple"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background w-5 h-5 border-danger group-data-[selected=true]:border-danger group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 w-2 h-2 bg-danger text-danger-foreground transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-danger transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Hawaiian
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Controversial and banned in this form.
              </div>
            </div>
          </label>
          <label
            aria-required="true"
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus !border-danger"
            data-invalid="true"
            data-testid="radioboxesfield_option_pepperoni"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                required=""
                tabindex="-1"
                title=""
                type="radio"
                value="pepperoni"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background w-5 h-5 border-danger group-data-[selected=true]:border-danger group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 w-2 h-2 bg-danger text-danger-foreground transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-danger transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Pepperoni
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                For those who like it spicy.
              </div>
            </div>
          </label>
        </div>
        <div
          class="text-tiny text-danger"
          id="react-aria-«replaced-aria-id»"
        >
          <ul
            aria-label="Validation errors of field radioboxesfield"
            data-testid="radioboxesfield_error"
          >
            <li
              style="overflow: hidden;"
            >
              <div
                class="px-1 pt-1"
              >
                No pineapple on pizza, please!
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Required 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        aria-label="Pick Your Superpower"
        aria-orientation="vertical"
        aria-required="true"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="true"
        data-testid="radioboxesfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <span
          class="relative after:content-['*'] after:text-danger after:ml-0.5 mb-2 inline-flex text-sm text-foreground subpixel-antialiased group-data-[invalid=true]:text-danger"
        >
          <legend>
            Pick Your Superpower
          </legend>
        </span>
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <label
            aria-required="true"
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_time"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                required=""
                tabindex="0"
                title=""
                type="radio"
                value="time"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Time Travel
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Never be late again (or just sleep in).
              </div>
            </div>
          </label>
          <label
            aria-required="true"
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_telepathy"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                required=""
                tabindex="0"
                title=""
                type="radio"
                value="telepathy"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Telepathy
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Read minds and regret it immediately.
              </div>
            </div>
          </label>
          <label
            aria-required="true"
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_flight"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                required=""
                tabindex="0"
                title=""
                type="radio"
                value="flight"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Flight
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Finally reach the top shelf!
              </div>
            </div>
          </label>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithIcons 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        aria-label="radioBoxesField"
        aria-orientation="vertical"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radioboxesfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_space"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="space"
              />
            </div>
            <div>
              <span
                data-testid="icon-FaRocket"
              >
                FaRocket
              </span>
            </div>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Space Explorer
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Blast off to Mars and leave your problems behind!
              </div>
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
          </label>
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_scientist"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="scientist"
              />
            </div>
            <div>
              <span
                data-testid="icon-FaFlask"
              >
                FaFlask
              </span>
            </div>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Mad Scientist
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Mix potions and accidentally create monsters.
              </div>
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
          </label>
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_support"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="support"
              />
            </div>
            <div>
              <span
                data-testid="icon-FaPhone"
              >
                FaPhone
              </span>
            </div>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Customer Support
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Answer support calls... forever.
              </div>
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
          </label>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithInitialValue 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        aria-label="radioBoxesField"
        aria-orientation="vertical"
        class="relative flex flex-col group gap-0"
        data-invalid="false"
        data-required="false"
        data-testid="radioboxesfield"
        id="react-aria-«replaced-aria-id»"
        role="radiogroup"
      >
        <div
          class="flex flex-col flex-wrap gap-2 data-[orientation=horizontal]:flex-row"
          data-orientation="vertical"
          role="presentation"
        >
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_warrior"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="-1"
                title=""
                type="radio"
                value="warrior"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Warrior
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Hack and slash your way through life.
              </div>
            </div>
          </label>
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-selected="true"
            data-testid="radioboxesfield_option_wizard"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                checked=""
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="0"
                title=""
                type="radio"
                value="wizard"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Wizard
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Master of the arcane arts and fireballs.
              </div>
            </div>
          </label>
          <label
            class="group inline-flex flex-auto cursor-pointer items-center justify-between gap-4 rounded-lg border-2 border-default p-4 hover:bg-content2 data-[selected=true]:border-focus"
            data-testid="radioboxesfield_option_rogue"
          >
            <div
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <input
                aria-describedby="«replaced-aria-id» react-aria-«replaced-aria-id»"
                aria-labelledby="«replaced-aria-id»"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="radioBoxesField"
                tabindex="-1"
                title=""
                type="radio"
                value="rogue"
              />
            </div>
            <span
              aria-hidden="true"
              class="relative inline-flex items-center justify-center shrink-0 overflow-hidden border-solid border-medium box-border border-default rounded-full group-data-[hover-unselected=true]:bg-default-100 outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:border-primary w-5 h-5 group-data-[pressed=true]:scale-95 transition-transform-colors motion-reduce:transition-none"
            >
              <span
                class="z-10 opacity-0 scale-0 origin-center rounded-full group-data-[selected=true]:opacity-100 group-data-[selected=true]:scale-100 bg-primary text-primary-foreground w-2 h-2 transition-transform-opacity motion-reduce:transition-none"
              />
            </span>
            <div
              class="flex flex-col ml-1 ms-2 grow"
            >
              <span
                class="relative select-none text-medium transition-colors motion-reduce:transition-none"
                id="«replaced-aria-id»"
              >
                Rogue
              </span>
              <div
                class="text-foreground opacity-70 text-small"
              >
                Sneaky backstabber with questionable morals.
              </div>
            </div>
          </label>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;
